--- a/homework1/package.json
+++ b/homework1/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
   "dependencies": {
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
@@ -18,5 +17,9 @@
     "eslint-plugin-import": "^2.14.0",
     "mocha": "^5.2.0",
     "should": "^13.2.3"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "description": ""
 }
